syntax = "proto3";

package user;

option go_package = "grpc/pb/user";

service UserService {
    rpc CreateUser (User) returns (CreateResponse); // Unary RPC to create a user
}

message Address {
    int64 id = 1;
    string full_address = 2;
    string province = 3;
    string city = 4;
    string country = 5;
    string postal_code = 6;
}

message User {
    reserved 2; // Reserved field name to avoid conflicts
    int64 id = 1;
    // string full_name = 2;
    int64 age = 3;
    float height = 4;
    double balance = 5;
    bool is_active = 6;    
    Address address = 7;
    repeated string educations = 8; // List of educational qualifications [e.g., "BSc", "MSc", "PhD"]
}

message CreateResponse {
    string message = 1;
}